Fixed bug #28072 (static array with some constant keys will be incorrectly ordered).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@190136 c90b9560-bf6c-de11-be94-00142212c4b1